[gd_scene load_steps=8 format=3 uid="uid://ddxu6ajgd3miq"]

[ext_resource type="Texture2D" uid="uid://c5tgw0qlc1dyp" path="res://assets/images/Heart_bar_empty.png" id="1_166ue"]
[ext_resource type="Texture2D" uid="uid://d2ivoglrv4b0j" path="res://assets/images/Heart_bar_full.png" id="2_uw6q5"]
[ext_resource type="Script" path="res://player_health.gd" id="3_4gcni"]
[ext_resource type="Texture2D" uid="uid://dfrsg1v7gfrgg" path="res://assets/images/Heart01.png" id="4_kup6v"]
[ext_resource type="FontFile" uid="uid://clup1xjlkr6e0" path="res://assets/fonts/MatrixSans-Video.ttf" id="5_1visi"]

[sub_resource type="Gradient" id="Gradient_injia"]
offsets = PackedFloat32Array(0, 0.4377, 0.600639)
colors = PackedColorArray(1, 1, 1, 1, 0.594249, 0.594249, 0.594249, 1, 0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h1bpj"]
font = ExtResource("5_1visi")
font_color = Color(0.12549, 1, 0, 1)
outline_size = 2
outline_color = Color(1, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.431373)

[node name="playerHealth" type="TextureProgressBar"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
step = 33.0
value = 99.0
rounded = true
texture_under = ExtResource("1_166ue")
texture_progress = ExtResource("2_uw6q5")
radial_initial_angle = 90.0
script = ExtResource("3_4gcni")

[node name="heart1" type="CPUParticles2D" parent="."]
position = Vector2(134, 23)
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
speed_scale = 1.3
explosiveness = 1.0
texture = ExtResource("4_kup6v")
color_ramp = SubResource("Gradient_injia")

[node name="heart2" type="CPUParticles2D" parent="."]
position = Vector2(80, 23)
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
speed_scale = 1.3
explosiveness = 1.0
texture = ExtResource("4_kup6v")
color_ramp = SubResource("Gradient_injia")

[node name="heart3" type="CPUParticles2D" parent="."]
z_index = 10
position = Vector2(26, 22)
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
speed_scale = 1.3
explosiveness = 1.0
texture = ExtResource("4_kup6v")
color_ramp = SubResource("Gradient_injia")

[node name="HealthLabel" type="Label" parent="."]
offset_left = -116.0
offset_right = -10.0
offset_bottom = 26.0
text = "HEALTH"
label_settings = SubResource("LabelSettings_h1bpj")
horizontal_alignment = 2
